oc/counter-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
        app.kubernetes.io/part-of: counter
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/gabriel05p/counter-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
