oc/counter-database.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-database
  labels:
    app: counter-database
    app.kubernetes.io/part-of: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
      app.kubernetes.io/part-of: counter
  template:
    metadata:
      labels:
        app: counter-database
        app.kubernetes.io/part-of: counter
    spec:
      containers:
        - name: counter-database
          image: quay.io/centos7/postgresql-10-centos7:20221109
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: counter-storage
            mountPath: /var/lib/pgsql/data
      volumes:
      - name: counter-storage
        persistentVolumeClaim:
          claimName: counter-database
