oc/service-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
  labels:
    app: counter-database
    app.kubernetes.io/part-of: counter
spec:
  selector:
    app: counter-database  # Selector to identify pods with this label
  ports:
    - protocol: TCP
      port: 5432 # The port that the service will expose
      targetPort: 5432  # The port on the container
  type: ClusterIP
