oc/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: counter
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: counter-frontend
  sessionAffinity: None
  type: ClusterIP
