oc/route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: counter-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
