oc/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: counter
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: counter-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
